[package]
name = "cflr"
version = "0.1.0"
edition = "2021"

[dependencies]
catppuccin-egui = { version = "5.3.0", default-features = false, features = ["egui29"] }
eframe = "0.29.1"
egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
url = "2.5.2"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
lalrpop = "0.21.0"
